# Interface-INFOB212

./: .gitignore  README.md  pyproject.toml  requirements.txt
bd/: __init__.py  __main__.py
