[tool.poetry]
name = "bd"
version = "0.1.0"
description = "Interface pour le projet du cours INFOB212"
authors = ["Sofian Mejjoute <sofian.mejjoute@student.unamur.be>"]

[tool.poetry.dependencies]
python = "^3.10"
mysql-connector = "^2.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
